[gd_scene load_steps=9 format=2]

[ext_resource path="res://Assets/chandler.png" type="Texture" id=1]
[ext_resource path="res://Assets/chandler_fire.png" type="Texture" id=2]
[ext_resource path="res://ChandlerAttackUpFire.gd" type="Script" id=3]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("ChandlerFireSprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ChandlerFireSprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 12, 13 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ChandlerFireSprite:flip_h")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:can_kill")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=3]
resource_name = "attack"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("ChandlerFireSprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 1, 1.6, 1.8, 2.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.9, 0.9 ), Vector2( 1.3, 1.5 ), Vector2( 1.76667, 2.84524 ), Vector2( 2.55833, 6.33036 ), Vector2( 2.55833, 11.2604 ), Vector2( 4.06667, 11.2604 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ChandlerFireSprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 1, 1.6, 1.8, 2.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 12, 12 ), Vector2( 12, 3 ), Vector2( 13, -12 ), Vector2( 14, -48 ), Vector2( 14, -99.7656 ), Vector2( 13, -99.7656 ), Vector2( 12, 10 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ChandlerFireSprite:flip_h")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 1, 1.6, 1.8, 2.1, 2.3, 2.5, 2.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ false, true, true, false, true, false, true, false, true, false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:can_kill")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1.04811, 2.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}

[sub_resource type="Animation" id=2]
resource_name = "idle"
length = 0.9
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("ChandlerFireSprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.35, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.9, 0.9 ), Vector2( 0.956, 1.051 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ChandlerFireSprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 12, 13 ), Vector2( 12, 11 ), Vector2( 13, 9 ) ]
}

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 22, 177.5 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 30.875, 26.375 )

[node name="ChandlerUpAttack" type="Node2D"]
script = ExtResource( 3 )

[node name="ChandlerSprite" type="Sprite" parent="."]
position = Vector2( 16, 23 )
texture = ExtResource( 1 )

[node name="ChandlerFireSprite" type="Sprite" parent="."]
position = Vector2( 12, 13 )
texture = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 1 )
anims/attack = SubResource( 3 )
anims/idle = SubResource( 2 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 14, -148.5 )
shape = SubResource( 4 )

[node name="Area2D2" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
position = Vector2( -45.875, 17.625 )
shape = SubResource( 5 )

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="Area2D2" to="." method="_on_Area2D2_body_entered"]
